--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
         run: |
           git clone https://github.com/ElectroBoy404NotFound/TinyiOS
           cd TinyiOS
+          rm -rf newlib
+          git clone https://github.com/checkra1n/newlib.git
           sed -i '' "s/-Werror //" Makefile
           make -j$(sysctl -n hw.logicalcpu)
       - name: Upload
