--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,7 @@ jobs:
           git clone https://github.com/ElectroBoy404NotFound/TinyiOS
           cd TinyiOS
           rm -rf newlib
-          git clone https://github.com/checkra1n/newlib.git
-          git submodule update
+          git submodule update --init --recursive
           sed -i '' "s/-Werror //" Makefile
           make -j$(sysctl -n hw.logicalcpu)
       - name: Upload
